# game

./: CMakeLists.txt
src/: main.cpp
src/game/: game.cpp  game.h
src/graphics/window/: window.cpp  window.h  x11_window.cpp  x11_window.h
src/utilities/logger/: log_handler.cpp  log_handler.h  log_level.h  log_message.cpp  log_message.h  logger.cpp  logger.h  terminal_log_handler.cpp  terminal_log_handler.h
